--- a/challenge1_brute_forcing/README
+++ b/challenge1_brute_forcing/README
@@ -1,4 +1,4 @@
-CHALLENGE 1 - BRUTE FORCING (O FORSE NO)
+.\CHALLENGE 1 - BRUTE FORCING (O FORSE NO)
 
 - lo scopo di questa challenge é inserire nel file passphrase.txt la password corretta
 - la sola cosa conosciuta é l'hash della password
